# rust-with-python

./: .gitignore  CONTRIBUTING.md  FIRST_COMMIT_CHECKLIST.md  LICENSE  MACOS_TROUBLESHOOTING.md  Makefile  README.md  TEMPLATE_COMPLETION.md  digits_calculator.pyi  main.py  pyproject.toml
digits-calculator/: .gitignore  Cargo.toml  pyproject.toml
digits-calculator/src/: lib.rs  math.rs
pyo3-example/: Makefile  pyproject.toml
pyo3-example/src/: lib.rs
tests/: test_digits_calculator.py
