[project]
name = "rust-with-python"
version = "0.1.0"
description = "Template project demonstrating Python and Rust integration with PyO3"
readme = "README.md"
requires-python = ">=3.13"
authors = [{name = "Duany Baró Menéndez", email = "macurandb@gmail.com"}]
license = {text = "MIT"}
keywords = ["python", "rust", "pyo3", "performance", "template"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
]
dependencies = [
    "digits-calculator @ file://${PROJECT_ROOT}/digits-calculator",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
