[package]
name = "digits-calculator"
version = "0.1.0"
edition = "2021"
description = "High-performance mathematical calculations in Rust, exposed to Python via PyO3"
authors = ["Duany Baró Menéndez <macurandb@gmail.com>"]
repository = "https://github.com/macurandb/rust-with-python"
license = "MIT"

[lib]
name = "digits_calculator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["extension-module"] }

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
